appId: com.zane.zanebox
---
- launchApp
- assertVisible:
    id: home_pager
- assertVisible:
    id: group_1
- assertVisible:
    id: node_1
- swipe:
    direction: LEFT
    duration: 500
- extendedWaitUntil:
    visible:
      id: node_301
    timeout: 30000
- takeScreenshot: reports/ui-1.0.2/current/home-swipe-group-2
- swipe:
    direction: LEFT
    duration: 500
- extendedWaitUntil:
    visible:
      id: node_601
    timeout: 30000
- takeScreenshot: reports/ui-1.0.2/current/home-swipe-group-3
- tapOn:
    id: group_2
- extendedWaitUntil:
    visible:
      id: node_301
    timeout: 30000
- tapOn:
    id: group_1
- extendedWaitUntil:
    visible:
      id: node_1
    timeout: 30000
- takeScreenshot: reports/ui-1.0.2/current/home-swipe-group-select
- tapOn:
    id: tab_2
- tapOn:
    id: settings_general
- scrollUntilVisible:
    element:
      id: setting_perAppEnabled
    direction: DOWN
    timeout: 60000
- tapOn:
    id: setting_perAppEnabled
- tapOn:
    id: apps_search
- inputText: com.zane.zanebox
- hideKeyboard
- scrollUntilVisible:
    element:
      id: app_com.zane.zanebox
    direction: DOWN
    timeout: 30000
- assertVisible:
    id: app_com.zane.zanebox
- takeScreenshot: reports/ui-1.0.2/current/apps-real-icon
- tapOn:
    id: app_com.zane.zanebox
- assertVisible: 已选择 1 个应用
- tapOn:
    id: apps_save
