appId: com.zane.zanebox
---
- launchApp
- assertVisible:
    id: connect_toggle
- tapOn:
    id: connect_toggle
- extendedWaitUntil:
    visible: '代理开关：断开'
    timeout: 30000
- takeScreenshot: reports/ui-1.0.2/current/subscription-connected
- tapOn:
    id: connect_toggle
- extendedWaitUntil:
    visible: '代理开关：连接'
    timeout: 30000
- takeScreenshot: reports/ui-1.0.2/current/subscription-disconnected
